--- a/FluentEditor/Resources/en-us/Resources.resw
+++ b/FluentEditor/Resources/en-us/Resources.resw
@@ -186,9 +186,6 @@
   <data name="ControlPaletteSaveErrorTitle" xml:space="preserve">
     <value>Unable to save</value>
   </data>
-  <data name="CustomPaletteDataPath" xml:space="preserve">
-    <value>ms-appx:///Resources/en-us/customPaletteData.json</value>
-  </data>
   <data name="DarkThemeTextContrastTitle" xml:space="preserve">
     <value>White Text</value>
   </data>
@@ -350,5 +347,8 @@
   </data>
   <data name="TestHyperlinkButton.Content" xml:space="preserve">
     <value>Hyperlink control</value>
+  </data>
+  <data name="ThemePaletteDataPath" xml:space="preserve">
+    <value>ms-appx:///Resources/en-us/themePaletteData.json</value>
   </data>
 </root>
