Added 'HostBackdrop' property

--- a/FluentEditor/Resources/en-us/Resources.resw
+++ b/FluentEditor/Resources/en-us/Resources.resw
@@ -399,4 +399,7 @@
   <data name="TestContentTextBlock.Text" xml:space="preserve">
     <value>Text block</value>
   </data>
+  <data name="AcrylicBackdropSourceToggleSwitch.Header" xml:space="preserve">
+    <value>Host backdrop source</value>
+  </data>
 </root>
